<resources>
    <string name="app_name">TS Lucky Draw</string>
    <string name="set_data">数据</string>
    <string name="set_award">奖项</string>
    <string name="begin_lucky_draw">抽奖</string>
    <string name="award_detail">奖项详情</string>

    <string name="lucky_draw_prize">奖项和抽奖次数</string>
    <string name="lucky_draw_prize_title">奖品信息</string>
    <string name="lucky_draw_button_start">抽</string>
    <string name="lucky_draw_button_end">停</string>
    <string name="lucky_draw_button_no_chance">抽完啦</string>
    <string name="lucky_draw_spinner_prize_tint">请选择奖品</string>
    <string name="lucky_draw_spinner_draw_count_tint">请选择抽奖次数</string>
    <string name="lucky_draw_award_data_null_tint">请设置奖品</string>
    <string name="lucky_draw_person_data_null_tint">请设置参与抽奖名单</string>

    <string name="lucky_draw_final_draw_hint">抽奖进度 %1$d/%2$d</string>
    <string name="lucky_draw_final_draw_hint_money">红包总额 %1$s 元</string>
    <string name="lucky_draw_final_back_hint">抽奖还在进行中，无法退出</string>

    <string name="add_award_name">奖项名称</string>
    <string name="add_award_draw_count">抽奖次数</string>
    <string name="add_award_count">获奖人数</string>
    <string name="add_award_is_repeatable">是否允许重复</string>
    <string name="add_award_detail">奖品名称及描述</string>
    <string name="add_award_picurl">点击下面白色方块添加奖品图片</string>

    <string name="data_person_info">员工信息:</string>
    <string name="data_win_prize_info">中奖信息:</string>
    <string name="data_delete">删除</string>
    <string name="data_modify">修改</string>
    <string name="data_none">无</string>
    <string name="data_pls_input_info">请输入员工信息</string>
    <string name="data_reload">重新加载</string>
    <string name="data_search">搜索</string>
    <string name="data_pls_import_data">请导入数据</string>
    <string name="data_add">添加</string>

    <string name="search_input_search_text">输入你想要搜索的东西</string>
    <string name="search_get_nothing">没有找到</string>

    <string name="img_transition_name">img_transition_name</string>
</resources>
