<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    >

    <LinearLayout
        android:id="@+id/main_item_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/four"
        android:layout_marginRight="@dimen/four"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/main_data_cv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eleven"
            android:layout_margin="@dimen/two"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/half"
            app:cardElevation="@dimen/half">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/set_data"
                android:textSize="20sp"
                android:textColor="#eee"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_award_cv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eleven"
            android:layout_margin="@dimen/two"
            app:cardBackgroundColor="#2fb6f6"
            app:cardCornerRadius="@dimen/half"
            app:cardElevation="@dimen/half"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/set_award"
                android:textSize="20sp"
                android:textColor="#eee"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_luckydraw_cv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eleven"
            android:layout_margin="@dimen/two"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/half"
            app:cardElevation="@dimen/half"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/begin_lucky_draw"
                android:textSize="20sp"
                android:textColor="#eee"
                />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>